<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    android:orientation="vertical"
    tools:context=".GuideActivity">


    <ImageView
        android:layout_width="360dp"
        android:layout_height="235dp"
        android:src="@mipmap/login_bg">
    </ImageView>


    <LinearLayout
        android:layout_width="360dp"
        android:layout_marginTop="40dp"
        android:layout_height="34dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="24dp"
            android:layout_marginLeft="30dp"
            android:layout_height="24dp"
            android:src="@mipmap/login_icon_mail_n">
        </ImageView>
        <EditText
            android:layout_width="200dp"
            android:layout_height="24dp"
            android:background="@null"
            android:textSize="14sp"
            android:id="@+id/email"
            android:hint="@string/et_shu_email"
            android:layout_marginLeft="20dp">
        </EditText>
    </LinearLayout>
    <TextView
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginLeft="30dp">
    </TextView>
    <LinearLayout
        android:layout_width="360dp"
        android:layout_marginTop="40dp"
        android:layout_height="34dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="24dp"
            android:layout_marginLeft="30dp"
            android:layout_height="24dp"
            android:src="@mipmap/login_icon_lock_n">
        </ImageView>
        <EditText
            android:layout_width="200dp"
            android:layout_height="24dp"
            android:background="@null"
            android:hint="@string/et_shu_pass"
            android:textSize="14sp"
            android:id="@+id/pass"
            android:layout_marginLeft="20dp">
        </EditText>
    </LinearLayout>
    <TextView
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginLeft="30dp">
    </TextView>
    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="20dp"
        android:layout_marginTop="14dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetpass"
            android:textSize="10sp"
            android:id="@+id/forget"
            android:layout_marginLeft="30dp">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shen_zhu"
            android:textSize="14sp"
            android:id="@+id/shen"
            android:layout_marginLeft="200dp"
            android:textColor="@color/blue">
        </TextView>
    </LinearLayout>
    <Button
        android:layout_width="300dp"
        android:layout_height="36dp"
        android:text="@string/login"
        android:layout_marginLeft="30dp"
        android:textColor="@android:color/white"
        android:background="@drawable/buttonback"
        android:id="@+id/bu"
        android:layout_marginTop="150dp">
    </Button>
</LinearLayout>